--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.2",
@@ -20,6 +21,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "swr": "^2.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
