--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -12,7 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "framer-motion": "^10.17.9",
+    "lucide-react": "^0.309.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
@@ -22,7 +26,10 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.8",
     "swr": "^2.2.4",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
