--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "react-simple-pull-to-refresh": "^1.3.3",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
